--- a/examples/classic.ipynb
+++ b/examples/classic.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interactive PGM Plotting\n",
+    "\n",
+    "_Boris Leistedt, October 2016_\n",
+    "\n",
+    "In this notebook we will make a simple PGM with `daft`, and then explore the interactive capabilities of the `PGM` class. \n",
+    "\n",
+    "### Requirements\n",
+    "\n",
+    "You will need `matplotlib`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,6 +26,9 @@
     "%matplotlib notebook  \n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rc\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../.')\n",
     "import daft\n",
     "rc(\"font\", family=\"serif\", size=12)\n",
     "rc(\"text\", usetex=True)"
@@ -18,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -568,7 +586,7 @@
        "};\n",
        "mpl.toolbar_items = [[\"Home\", \"Reset original view\", \"fa fa-home icon-home\", \"home\"], [\"Back\", \"Back to  previous view\", \"fa fa-arrow-left icon-arrow-left\", \"back\"], [\"Forward\", \"Forward to next view\", \"fa fa-arrow-right icon-arrow-right\", \"forward\"], [\"\", \"\", \"\", \"\"], [\"Pan\", \"Pan axes with left mouse, zoom with right\", \"fa fa-arrows icon-move\", \"pan\"], [\"Zoom\", \"Zoom to rectangle\", \"fa fa-square-o icon-check-empty\", \"zoom\"], [\"\", \"\", \"\", \"\"], [\"Download\", \"Download plot\", \"fa fa-floppy-o icon-save\", \"download\"]];\n",
        "\n",
-       "mpl.extensions = [\"eps\", \"jpeg\", \"pdf\", \"png\", \"ps\", \"raw\", \"svg\", \"tif\"];\n",
+       "mpl.extensions = [\"eps\", \"pdf\", \"png\", \"ps\", \"raw\", \"svg\"];\n",
        "\n",
        "mpl.default_extension = \"png\";var comm_websocket_adapter = function(comm) {\n",
        "    // Create a \"websocket\"-like object which calls the given IPython comm\n",
@@ -736,9 +754,12 @@
        "    // Check for shift+enter\n",
        "    if (event.shiftKey && event.which == 13) {\n",
        "        this.canvas_div.blur();\n",
-       "        // select the cell after this one\n",
-       "        var index = IPython.notebook.find_cell_index(this.cell_info[0]);\n",
-       "        IPython.notebook.select(index + 1);\n",
+       "        event.shiftKey = false;\n",
+       "        // Send a \"J\" for go to next cell\n",
+       "        event.which = 74;\n",
+       "        event.keyCode = 74;\n",
+       "        manager.command_mode();\n",
+       "        manager.handle_keydown(event);\n",
        "    }\n",
        "}\n",
        "\n",
@@ -799,10 +820,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._axes.Axes at 0x11010fe48>"
+       "<matplotlib.axes._axes.Axes at 0x105683f50>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,9 +858,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -850,7 +872,7 @@
       "Node('beta', r'$\\beta$', 1.5, scale=1, 2, observed=False, fixed=False, offset=[0, 0], plot_params={})\n",
       "Node('w', r'$w_n$', 1, scale=1, 1, observed=False, fixed=False, offset=[0, 0], plot_params={})\n",
       "Node('x', r'$x_n$', 2, scale=1, 1, observed=True, fixed=False, offset=[0, 0], plot_params={})\n",
-      "Plate([0.5, 0.5, 2, 1], label=r'$n = 1, \\cdots, N$', position='bottom left', label_offset=[5, 5], shift=-0.1, rect_params={'ec': 'k', 'lw': 1, 'fc': 'none'}, bbox={})\n",
+      "Plate([0.5, 0.5, 2, 1], label=r'$n = 1, \\cdots, N$', position='bottom left', label_offset=[5, 5], shift=-0.1, rect_params={'lw': 1, 'fc': 'none', 'ec': 'k'}, bbox={})\n",
       "\n"
      ]
     }
@@ -861,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -875,21 +897,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
